# bias-analysis

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  MIGRATION.md  README.md  pyproject.toml
backend/: .dockerignore  Dockerfile  __init__.py  config.py  main.py  requirements.txt
backend/adapters/: __init__.py  http.py
backend/api/: __init__.py  router.py
backend/application/: __init__.py  llm_parser.py  openrouter_models.py  run_artifacts.py  run_executor.py  run_recovery.py
backend/domain/: __init__.py  analysis.py  enrichment.py  models.py  openrouter_models.py  records.py
backend/storage/: __init__.py  database.py  repository.py
bias_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: deployment-railway.md
frontend/: Dockerfile  angular.json  nginx.conf.template  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/data/: bias_analysis.sqlite3
frontend/docker-entrypoint.d/: 40-runtime-config.sh
frontend/public/: app-config.js
frontend/src/: index.html  main.ts  styles.css
tests/: conftest.py  test_bias_field_fallbacks.py  test_canonicalize.py  test_config.py  test_enrichment_service.py  test_http_client.py  test_llm_parser.py  test_openrouter_client.py  test_openrouter_models.py  test_run_api.py  test_run_artifacts.py  test_scholarly_client.py  test_verifiability_risk.py
thesis/: aghdpl.cls  praca.tex
thesis/chapters/: 01-introduction.tex  02-background-and-related-work.tex  03-research-objectives-and-methodology.tex  04-system-design-and-architecture.tex  05-implementation.tex  07-discussion.tex  (+2 more)
(+36 files in other folders)
