[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bias-analysis"
version = "0.1.0"
description = "FastAPI backend for scholarly retrieval bias analysis and OpenRouter-based LLM audits."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "httpx>=0.27,<1.0",
  "tenacity>=8.2,<10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["storage/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
